--- a/Examples-Boris/debounce-pushbutton-steps/platformio.ini
+++ b/Examples-Boris/debounce-pushbutton-steps/platformio.ini
@@ -12,5 +12,5 @@
 platform = teensy
 board = teensy35
 framework = arduino
-upload_port = /dev/cu.usbmodem100803401
-monitor_port = /dev/cu.usbmodem100803401
+#upload_port = /dev/cu.usbmodem100803401
+#monitor_port = /dev/cu.usbmodem100803401
