--- a/D - Embedded Systems/Exercises/exercise-20-boris/platformio.ini
+++ b/D - Embedded Systems/Exercises/exercise-20-boris/platformio.ini
@@ -1,4 +1,4 @@
-; PlatformIO Project Configuration File
+;PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -12,3 +12,5 @@
 platform = teensy
 board = teensy35
 framework = arduino
+upload_port = /dev/cu.usbmodem100803401
+monitor_port = /dev/cu.usbmodem100803401
