--- a/D - Embedded Systems/Exercises/exercise-19-boris/platformio.ini
+++ b/D - Embedded Systems/Exercises/exercise-19-boris/platformio.ini
@@ -1,4 +1,4 @@
-; PlatformIO Project Configuration File
+;PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -8,7 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:featheresp32]
-platform = espressif32
-board = featheresp32
+[env:teensy35]
+platform = teensy
+board = teensy35
 framework = arduino
+upload_port = /dev/cu.usbmodem100803401
+monitor_port = /dev/cu.usbmodem100803401
